--- a/latex-wwustyle_2017/titlepage.tex
+++ b/latex-wwustyle_2017/titlepage.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage[expansion=false]{microtype}
-\usepackage[pantone3282]{wwustyle}
+\usepackage[pantone3282]{wwustyle-titlepage}
 \title{An dieser Stelle steht der Titel\\des Printproduktes.}
 \subtitle{Zusätzliche Informationen und Bezeichnungen\\werden an dieser Stelle positioniert.}
 \institutelogo{Hier kommt das Logo hin}
