--- a/latex-wwustyle_2017/wwustyle-titlepage.sty
+++ b/latex-wwustyle_2017/wwustyle-titlepage.sty
@@ -21,12 +21,8 @@
 \renewcommand{\sfdefault}{fMt}
 \RequirePackage{microtype}
 
-%\definecolor{prinz}{RGB}{40,40,80}
-\definecolor{prinz}{RGB}{255,255,255}
 %\definecolor{pantoneblack7}{RGB}{62,62,59}
 \definecolor{pantoneblack7}{RGB}{102,102,102}
-\definecolor{white}{RGB}{230,230,230}
-\definecolor{wwublack}{RGB}{102,102,102}
 \definecolor{pantone312}{RGB}{0,157,209}    % Hellblau*
 \definecolor{pantone315}{RGB}{0,110,137}    % Dunkelblau*
 \definecolor{pantone3282}{RGB}{0,142,150}   % Dunkelgruen*
@@ -62,16 +58,16 @@
 \DeclareOption{pantoneprozessyellow}{%
     \set@wwu@maincolor{pantoneprozessyellow}{pantone312}}
 
-\newcommand{\claimText}{wissenleben}
+\newcommand{\claimText}{}
 \newcommand{\switchToEnglish}
 {
-\renewcommand{\claimText}{livingknowledge}
+\renewcommand{\claimText}{_eng}
 }
 \DeclareOption{english}{
 \switchToEnglish
 }
-\newcommand{\claimTitle}{\claim{1.05}{0}{grey}}
-\newcommand{\logoTitle}{\wwulogo{1}}
+\newcommand{\claimTitle}{\claim}
+\newcommand{\logoTitle}{\wwulogo}
 \ProcessOptions\relax
 
 \definecolor{maincolor}{named}{\bg@maincolor}
@@ -79,99 +75,15 @@
 
 %% ========= Images and Graphics ============
 
-% the claim as a tikzpicture, it uses two parameters:
-%% \parameter 1 the scale
-%% \parameter 2 the rotation
-%% #3 Farbe
-\newcommand{\claim}[3]{%
-    \strut\hskip-16mm\rlap{\includegraphics[scale=#1]{\claimText#3}}%
+% the claim with \includegraphics
+\newcommand{\claim}{%
+    \strut\rlap{\includegraphics{WWU_Claim_2017\claimText_4c}}%
 }
 
-%% the logo as tikzpicture, is takes one parameter
-%% \parameter 1 the scale
-\newcommand{\wwulogo}[1]{\wwu@logo{#1}{wwublack}}
-
-\newcommand*{\wwu@logo}[2]{%
-  \begin{tikzpicture}[
-    node distance=1.866666666mm,
-    transform shape,
-    scale=#1]
-    %scale=1.02]
-    \tikzstyle{every node}=[inner sep=0mm, fill=#2]
-    \tikzstyle{mytextnode}=[inner sep=0mm, below left of=bar,fill=none,
-    color=#2]
-    % the first bar
-  \node[rectangle,
-             color=#2,
-             minimum height=1.6mm,
-             minimum width=0.7mm] (bar)  {};
-  % the second bar
-  \node[below of = bar,
-            rectangle,
-             color=#2,
-            minimum height=0.7mm,
-            minimum width=2.6mm,
-            yshift=0.26mm] {};
-  % the third bar
-  \node[below of = bar,
-             rectangle,
-             color=#2,
-             minimum height=1.6mm,
-             minimum width=4.5mm,
-             yshift=-3.2mm] {};
-  % the fourth bar
-  \node[below left of=bar,
-            rectangle,
-             color=#2,
-            minimum height=1.5mm,
-            minimum width=17.8mm,
-            yshift=-7mm,
-            xshift=-12.1mm] (fourth) {};
-  % the fifth bar
-  \node[below left of=bar,
-             rectangle,
-             color=#2,
-             minimum height=1.6mm,
-             minimum width=17.8mm,
-             yshift=-7mm,
-             xshift=14.85mm] (fifth) {};
-  % the sixth bar
-  \node[below of=bar,
-             rectangle,
-             color=#2,
-             minimum height=0.7mm,
-             minimum width=44.75mm,
-             yshift=-10.7mm,
-             xshift=0.05mm] {};
-  % the  seventh bar
-  \node[below of=bar,
-             rectangle,
-             color=#2,
-             minimum height=1.6mm,
-             minimum width=44.75mm,
-             %yshift=-17.5mm,
-             yshift=-17.8mm,
-             xshift=0.05mm] {};
-  \node[mytextnode,
-  yshift=-9.9mm,
-  xshift=40mm] {
-    \fontsize{10.6mm}{1mm}\selectfont
-    \usefont{T1}{fMt}{b}{sc}
-    \textls[15]{WWU}
-  };
-  \node[mytextnode,
-  yshift=-17mm,
-  xshift=40.1mm] {
-    \fontsize{4.3mm}{1mm}\selectfont
-    \usefont{T1}{fMt}{m}{n}
-    \textls[15]{M\spatium \"U\spatium N\spatium S\spatium T\spatium E\spatium R}
-  };
-
-  \end{tikzpicture}
-} % end of the logo
-
-%
-\newcommand*{\spatium}{\kern0.23em}
+% WWU logo with \includegraphics
+\newcommand*{\wwulogo}{%
+	\includegraphics{WWUMuenster_Logo_2017_4c}%
+}
 
 % define the institute logo command
 \newcommand{\@institutelogo}{}
@@ -198,7 +110,8 @@
  \begin{tikzpicture}[remember picture,overlay]
 %  \node [yshift=-0.8mm,xshift=-0.35mm]at (current page.center) {\includegraphics[width=21cm]{seite_einzeln}};
     %% the logo
-    \node [xshift=5.5cm,yshift=-2.5cm] at (current page.north west)
+    % xshift: 14mm - 2.5mm (logo PDF file padding) = 11.5mm
+    \node [xshift=11.5mm,yshift=-2.5cm,inner sep=0,anchor=west] at (current page.north west)
     {\logoTitle};
     %% the title
     \node (greaternode) [xshift=1.4cm,yshift=-7.86cm,anchor=base west] at (current page.north west)
@@ -210,7 +123,7 @@
       \fontsize{26pt}{28pt}\selectfont\textls[15]{\llap{> }\@title}\par
     };
     \node [xshift=1.85cm,yshift=-10.65cm, anchor=south west] at (current page.north west)
-    [inner sep=0mm,text width=16.45cm, minimum width=16.45cm] {
+    [inner sep=0,text width=16.45cm, minimum width=16.45cm] {
       \color{pantoneblack7}
       \fontsize{19.5pt}{21pt}\selectfont
       \@subtitle\par
@@ -267,7 +180,9 @@
     fill=maincolor
     ] {};
     %% the claim
-    \node [xshift=1.8cm,yshift=1.4cm, inner sep=0, anchor=south west] at (current page.south west)
+    % xshift: 14mm - 2.5mm (claim PDF file padding) = 11.5mm
+    % yshift: 14mm - 3mm (claim PDF file padding) = 11mm
+    \node [xshift=12.75mm,yshift=11mm, inner sep=0, anchor=south west] at (current page.south west)
     (claim) {\claimTitle};
   \end{tikzpicture}
   }
