Move PDF files to directory “wwustyle”

--- a/latex-wwustyle_2017/wwustyle-titlepage.sty
+++ b/latex-wwustyle_2017/wwustyle-titlepage.sty
@@ -108,12 +108,12 @@
 
 % the claim with \includegraphics
 \newcommand{\claim}{%
-    \strut\rlap{\includegraphics{WWU_Claim_2017\claimText_4c}}%
+    \strut\rlap{\includegraphics{wwustyle/WWU_Claim_2017\claimText_4c}}%
 }
 
 % WWU logo with \includegraphics
 \newcommand*{\wwulogo}{%
-	\includegraphics{WWUMuenster_Logo_2017_4c}%
+	\includegraphics{wwustyle/WWUMuenster_Logo_2017_4c}%
 }
 
 % define the institute logo command
