Do not force paper size; print warning for non-A4

--- a/latex-wwustyle_2017/titlepage.tex
+++ b/latex-wwustyle_2017/titlepage.tex
@@ -1,4 +1,4 @@
-\documentclass{scrartcl}
+\documentclass[a4paper]{scrartcl}
 \usepackage[pantone312]{wwustyle-titlepage}
 
 \title{An dieser Stelle steht der Titel\\des Printprodukts.}
