Reintroduce institute logo (was broken by satz&sonders)

--- a/latex-wwustyle_2017/titlepage.tex
+++ b/latex-wwustyle_2017/titlepage.tex
@@ -3,7 +3,7 @@
 
 \title{An dieser Stelle steht der Titel\\des Printprodukts.}
 \subtitle{Zusätzliche Informationen und Bezeichnungen\\werden an dieser Stelle positioniert.}
-\institutelogo{Hier kommt das Logo hin}
+\institutelogo{Hier kommt das Institutslogo hin}
 
 \begin{document}
 
