Split German and English versions

--- a/tex/titlepage.tex
+++ b/tex/titlepage.tex
@@ -1,9 +1,9 @@
 \documentclass[a4paper]{scrartcl}
-\usepackage[pantone312]{wwustyle-titlepage}
+\usepackage[english, pantone312]{wwustyle-titlepage}
 
-\title{An dieser Stelle steht der Titel\\des Printprodukts.}
-\subtitle{Zusätzliche Informationen und Bezeichnungen\\werden an dieser Stelle positioniert.}
-\institutelogo{Hier kommt das Institutslogo hin}
+\title{This is where the title of the\\printed product will appear.}
+\subtitle{Additional information and descriptions\\will be positioned here.}
+\institutelogo{The institute logo will appear here}
 
 \begin{document}
 
