--- a/tex/titelseite.tex
+++ b/tex/titelseite.tex
@@ -1,4 +1,31 @@
-\documentclass[a4paper]{scrartcl}
+% !TeX program = lualatex
+% ACHTUNG: Diese Datei muss mit xelatex oder lualatex ausgeführt werden!
+
+% Derzeit kann die Vorlage nur mit dem Papierformat DIN A4
+% (hochkant) verwendet werden. Andere Formate führen zu
+% falschen Abständen auf der Titelseite!
+% Auch „german“ muss hier angegeben werden, damit die Sprache
+% (z.B. in siunitx) auf Deutsch gestellt wird.
+\documentclass[a4paper, german, ngerman]{scrartcl}
+% Spracheinstellung
+\usepackage{polyglossia}
+\setmainlanguage{german}
+
+% Offizielles WWU-LaTeX-Paket für Titelseiten: wwustyle-titlepage
+% Die Verwendung von wwustyle erfordert xelatex oder lualatex
+% (aufgrund der verwendeten Schriftarten).
+% Bei Fragen hierzu wenden Sie sich an fsphys@uni-muenster.de
+% Mögliche Optionen:
+% - english: Verwendet englischen Claim („living.knowledge“)
+% - Verschiedene Farbvarianten:
+%   pantoneblack7 („schwarz“)
+%   pantone234 („magenta“)
+%   pantone7462 („dunkelblau“)
+%   pantone312 („hellblau“)
+%   pantone315 („dunkelgrün/blau“)
+%   pantone3135 („grün“)
+%   pantone369 („hellgrün“)
+%   pantone390 („olivgrün“)
 \usepackage[pantone312]{wwustyle-titlepage}
 
 \title{An dieser Stelle steht der Titel\\des Printprodukts.}
