Translate overlooked comment

--- a/tex/titlepage.tex
+++ b/tex/titlepage.tex
@@ -9,11 +9,10 @@
 \usepackage{polyglossia}
 \setmainlanguage{english}
 
-% Offizielles WWU-LaTeX-Paket für Titelseiten: wwustyle-titlepage
-% Die Verwendung von wwustyle erfordert xelatex oder lualatex
-% (aufgrund der verwendeten Schriftarten).
-% Bei Fragen hierzu wenden Sie sich an fsphys@uni-muenster.de
-% Mögliche Optionen:
+% Official WWU LaTeX package for presentations: wwustyle-titlepage
+% The use of wwustyle requires xelatex or lualatex (due to the fonts).
+% If you have any questions regarding this, contact fsphys@uni-muenster.de
+% Available options:
 % - english: uses the English claim (“living.knowledge”)
 % - Color variants:
 %   pantoneblack7 (“black”)
